--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js" defer></script>
 </head>
+
 <body>
+
+    <div id="tools">
+        <button id="refresh">Create a new grid</button>
+    </div>
 
     <div id="container">
         <!-- create & insert divs here -->
