Add new button to create new sketch with different grid size

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
 
+    <h1>ETCH-A-SKETCH</h1>
+    <p>Move your mouse and hover over the grid below to see its color changes.</p>
     <div id="tools">
-        <button id="refresh">Create a new grid</button>
+        <button id="refresh">Try new sketch</button>
     </div>
 
     <div id="container">
