--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <p>Move your mouse and hover over the grid below to see its color changes.</p>
     <div id="tools">
         <button id="refresh">Try new sketch</button>
+
+        <div>
+            <label class="text" for='toggle-rainbow'>Color it rainbow</label>
+            <input type='checkbox' id='toggle-rainbow' class="checkbox" />
+            <label class="switch" for='toggle-rainbow'></label>
+        </div>
     </div>
 
     <div id="container">
