--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
     <h1>ETCH-A-SKETCH</h1>
     <p>Move your mouse and hover over the grid below to see its color changes.</p>
     <div id="tools">
-        <button id="refresh">Try new sketch</button>
+        <button id="refresh">New sketch</button>
+
+        <div>
+            <label for="colorselect">Select color</label>
+            <select name="colorselector" id="color-select">
+                    <option value="pink">Pink</option>
+                <option value="skyblue">Skyblue</option>
+                <option value="gold">Gold</option>
+                <option value="teal">Teal</option>
+                <option value="gray">Gray</option>
+                <option value="black">Black</option>
+            </select>
+        </div>
 
         <div>
             <label class="text" for='toggle-rainbow'>Color it rainbow</label>
