Add some feature

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="colorpicker">
                 <label for="picker">Color: </label>
-                <input type="color" name="picker" id="picker" value="#ff8484">
+                <input type="color" name="picker" id="picker" value="#ffc0cb">
             </div>
 
             <div class="rainbow">
@@ -36,11 +36,19 @@
             </div>
 
             <div class="sizeslider">
-                <label for="slider">Grid size: </label>
-                <input type="range" name="slider" id="slider" min="20" max="80" value="30">
+                <label for="slider">Grid size:</label><br>
+                <input type="range" name="slider" id="slider" step="1" min="20" max="80" value="30">
+            </div>
+
+            <div id="refreshbutton">
+                <button id="refresh">New sketch</button>
             </div>
 
         </div>
+    </div>
+
+    <div id="footer">
+        &copy; <a href="https://github.com/codedlovely">@codedlovely</a>
     </div>
 
 </body>
